--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="#"><i
-                                            class="bi bi-phone p-1"></i>Download app</a>
+                                            class="bi bi-phone"></i>Download app</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" href="#">Become a supplier</a>
@@ -64,8 +64,8 @@
         </div>
     </div>
     <hr>
-    <div class="container-fluid ml3 mt-5">
-        <div class="row ">
+    <div class="container-fluid ml3 ">
+        <div class="row mt-5 ">
             <div class="col d-flex pb-0 pt-0 nav-li">
                 <a href="#" class="p-4  text-decoration-none">Women Ethnic</a>
                 <a href="#" class="p-4 text-decoration-none">Women Western</a>
